исправлен баг в swagger Organization
