# storage/api-docs/api-docs.json
@@ -1742,6 +1742,57 @@
             }
         },
         "/api/organization": {
+            "get": {
+                "tags": [
+                    "Organization"
+                ],
+                "summary": "Вернуть все записи organization",
+                "operationId": "c90531c400a529c87b495edff01d7169",
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/OrganizationResource"
+                                            }
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Return organization select."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Общая ошибка сервера.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message_error": {
+                                            "type": "string",
+                                            "example": "Общая ошибка сервера."
+                                        },
+                                        "code": {
+                                            "type": "integer",
+                                            "example": "500"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "tags": [
                     "Organization"
@@ -1975,59 +2026,6 @@
                                         "message_error": {
                                             "type": "string",
                                             "example": "Такой организации не существует."
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Общая ошибка сервера.",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "message_error": {
-                                            "type": "string",
-                                            "example": "Общая ошибка сервера."
-                                        },
-                                        "code": {
-                                            "type": "integer",
-                                            "example": "500"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/api/organization}": {
-            "get": {
-                "tags": [
-                    "Organization"
-                ],
-                "summary": "Вернуть все записи organization",
-                "operationId": "3f2b670d32050717310f8b0b594f89ba",
-                "responses": {
-                    "200": {
-                        "description": "Ok",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/components/schemas/OrganizationResource"
-                                            }
-                                        },
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Return organization select."
                                         }
                                     },
                                     "type": "object"
